--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="icon" href="/favicon.ico" />
 
-    <title>MK-Admin2</title>
+    <title>MK-Admin</title>
 
     <style>
       /* Set vuestic higher priority over tailwind normalize css */
