--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300..600,0,0"
     />
     <link rel="icon" href="/favicon.ico" />
-
+    <!--script src="https://s3.tradingview.com/tv.js"></script-->
     <title>MK-Admin2</title>
 
     <style>
