--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,12 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,300..600,0,0"
     />
+    <link 
+      rel="stylesheet" 
+      href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/5.8.1/github-markdown.min.css">
     <link rel="icon" href="/favicon.ico" />
     <!--script src="https://s3.tradingview.com/tv.js"></script-->
-    <title>MK-Admin</title>
+    <title>MK-Admin-X</title>
 
     <style>
       /* Set vuestic higher priority over tailwind normalize css */
